--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
       </label>
       <div id="contenedorHeaderSecciones" class="contenedor_header_secciones">
         <ul id="navList" class="list">
-          <li><a id="anchordNav" class="anchord_secciones" href="#sectionPresentacion">Inicio</a></li>
-          <li><a id="anchordNav" class="anchord_secciones" href="#contenedorAnimationChevron">¿Cómo lo hacemos?</a></li>
-          <li><a id="anchordNav" class="anchord_secciones" href="#sectionNosotros">¿Quiénes somos?</a></li>
-          <li><a id="anchordNav" class="anchord_secciones" href="#sectionContacto">Contacto</a></li>
+          <li><a id="anchordNavInicio" class="anchord_secciones" href="#">Inicio</a></li>
+          <li><a id="anchordNavServicios" class="anchord_secciones" href="#sectionServicios">¿Cómo lo hacemos?</a></li>
+          <li><a id="anchordNavNosotros" class="anchord_secciones" href="#sectionNosotros">¿Quiénes somos?</a></li>
+          <li><a id="anchordNavContacto" class="anchord_secciones" href="#sectionContacto">Contacto</a></li>
           <div class="socialMedia">
             <!-- Facebook -->
             <a href="" type="button" class="socialMedia_anchord" target="_blank">
@@ -131,43 +131,14 @@
     </article>
   </section>   
     <main id="indexMain" class="main">
-<!--       <section id="sectionPresentacion" class="section_presentacion">
-        <hr id="presentacionHr">
-        <article id="contenedorPresentacion" class="contenedor_presentacion">
-          <div class="contenedor_presentacion_h1">
-            <h1 class="presentacion_h1">IMPULSAMOS TU CAMINO DIGITAL 🚀</h1>
-          </div>
-          <div style="height: 290px;">
-          <div class="contenedor_btn_pulse">
-            <a href="#sectionServicios" class="btn_pulse">Descubrilos</a>          
-          </div>
-          <div id="contenedorAnimationChevron" class="contenedor_animationChevron">
-            <div class="container_chevron">
-              <div class="chevron"></div>
-              <div class="chevron"></div>
-              <div class="chevron"></div>
-            </div>
-          </div>
-        </article>
-      </section>   --> 
-      <section id="sectionServicios" class="section_servicios">
+      <section id="sectionServicios" class="section_servicios wow animate__animated animate__fadeInLeft">
         <hr id="serviciosHr">
         <h2 id="sectionServiciosTitle" class="h2 section_servicios_title wow animate__animated animate__fadeInLeft">
           ¿CÓMO LO HACEMOS?
         </h2>
         <p class="section_servicios_paragraph">
-          Contamos con diferentes servicios que se conectan para que brindarte los elementos que se necesitan para construir una marca sólida que te permita ATRAER, CONECTAR y VENDER.
+          Contamos con tres servicios que se conectan y juntos, garantizan el proceso necesario para construir una marca sólida que destaque en el mercado y que te impulse para <span>ATRAER</span>, <span>CONECTAR</span> y <span>VENDER</span>.
         </p>
-        <article id="particles-js" class="servicio_principal_container wow animate__animated animate__fadeInLeft">
-<!--           <div class="containerStar"> -->
-            <!-- <i class="fa fa-solid fa-star stars_icon"></i> -->
-<!--             <h3 class="h3 servicioPrincipal_title">
-              NUESTROS PRODUCTOS ESTRELLA
-            </h3> -->
-            <!-- <i class="fa fa-solid fa-star stars_icon"></i> -->
-            <!-- <img src="./assets/icons3D/star-dynamic-premium.png" class="servicioPrincipal_star" alt=""> -->
-          </div>
-        </article>
         <article class="cardsImpulsos_container">
           <div id="containerContentImpulso" class="container_content_impulso wow animate__animated animate__fadeInLeft delay-1">
             <div id="contenedorImagenImpulsoMarca" class="contenedor_impulso_img">
@@ -767,6 +738,7 @@
     </footer>     
     <!-- Scripts propios-->
     <script type="text/javascript" src="./js/hiddenNav.js"></script>
+    <script type="text/javascript" src="./js/anchordNavIndex.js"></script>
     <!-- Script Bootstrap-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <!-- Swipper-->
