--- a/index.html
+++ b/index.html
@@ -41,9 +41,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fugaz+One&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <!-- Analytics-->
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -98,11 +97,7 @@
     </nav>              
   </header>
   <section id="sectionPresentacion" class="section_presentacion">
-<!--     <hr id="presentacionHr"> -->
     <article id="contenedorPresentacion" class="contenedor_presentacion">
-<!--       <div class="contenedor_presentacion_h1">
-          <h1 class="presentacion_h1">IMPULSAMOS TU CAMINO DIGITAL</h1>
-      </div> -->
       <div class="containerCarouselButton">
         <div class="swiper mySwiper carouselPresentacion">
           <div class="swiper-wrapper carouselPresentacion_content">
@@ -122,11 +117,11 @@
         </div>
       </div>
       <div id="contenedorAnimationChevron" class="contenedor_animationChevron">
-        <div class="container_chevron">
+        <a href="#sectionServicios" class="container_chevron">
           <div class="chevron"></div>
           <div class="chevron"></div>
           <div class="chevron"></div>
-        </div>
+        </a>
       </div>
     </article>
   </section>   
@@ -142,7 +137,7 @@
         <article class="cardsImpulsos_container">
           <div id="containerContentImpulso" class="container_content_impulso wow animate__animated animate__fadeInLeft delay-1">
             <div id="contenedorImagenImpulsoMarca" class="contenedor_impulso_img">
-              <img src="./assets/composiciones del logo/COHETE_ISOTIPO/PNG/COHETE_ EN BLANCO-11.png" alt="" class="img_impulso">      
+              <img src="./assets/composiciones del logo/COHETE_ISOTIPO/PNG/COHETE_EN GRIS-12.png" alt="Impulsar - Impulso Identidad de Marca" class="img_impulso">      
             </div>
             <div id="containerSpeachImpulsoMarca" class="container_impulso_speach">
               <h3 class=" h3 impulso_title">IMPULSO DE IDENTIDAD DE MARCA</h3>
@@ -155,18 +150,18 @@
                 <a href="./pages/marca.html" class="btn_pulse">Más detalles</a>          
               </div>
               <div class="contenedor_btn_pulse btn_impulsos">
-                <a href="https://calendly.com/impulsar-dev/impulso-identidad-de-marca" class="btn_pulse">Agendar un encuentro</a>          
+                <a href="https://calendar.google.com/calendar/embed?src=c_5tcva5qj3o3papggtkfnaohkm0%40group.calendar.google.com&ctz=America%2FArgentina%2FMendoza" class="btn_pulse">Agendar un encuentro</a>          
               </div>
             </div>
           </div>
           <div id="containerContentImpulso" class="container_content_impulso wow animate__animated animate__fadeInLeft delay-2">
             <div id="contenedorImagenImpulsoVisual" class="contenedor_impulso_img">
-              <img src="./assets/composiciones del logo/COHETE_ISOTIPO/PNG/COHETE_ EN BLANCO-11.png" alt="" class="img_impulso">      
+              <img src="./assets/composiciones del logo/COHETE_ISOTIPO/PNG/COHETE_EN GRIS-12.png" alt="Impulsar - Impulso Identidad Visual" class="img_impulso">      
             </div>
             <div id="containerParagraphImpulsoVisual" class="container_impulso_speach">
               <h3 class=" h3 impulso_title">IMPULSO DE IDENTIDAD VISUAL </h3>
               <p class="impulso_paragraph">
-                Desarollá el estilo gráfico profesional de tu marca y dale ese impulso para destacar en el mercado.
+                Desarollá el estilo gráfico de tu marca y dale ese impulso para destacar en el mercado.
               </p>
             </div>  
             <div class="contenedor_btns">
@@ -174,13 +169,13 @@
                 <a href="./pages/visual.html" class="btn_pulse">Más detalles</a>          
               </div>
               <div class="contenedor_btn_pulse btn_impulsos">
-                <a href="https://calendly.com/impulsar-dev/impulso-de-identidad-visual" class="btn_pulse">Agendar un encuentro</a>          
+                <a href="https://calendar.google.com/calendar/embed?src=c_5tcva5qj3o3papggtkfnaohkm0%40group.calendar.google.com&ctz=America%2FArgentina%2FMendoza" class="btn_pulse">Agendar un encuentro</a>          
               </div>
             </div>      
           </div>
           <div id="containerContentImpulso" class="container_content_impulso wow animate__animated animate__fadeInLeft delay-3">
             <div id="contenedorImagenImpulsoWeb" class="contenedor_impulso_img">
-              <img src="./assets/composiciones del logo/COHETE_ISOTIPO/PNG/COHETE_ EN BLANCO-11.png" alt="" class="img_impulso">   
+              <img src="./assets/composiciones del logo/COHETE_ISOTIPO/PNG/COHETE_EN GRIS-12.png" alt="Impulsar - Impulso Web - Páginas Web" class="img_impulso">   
             </div>
             <div id="containerParagraphImpulsoWeb" class="container_impulso_speach">
               <h3 class=" h3 impulso_title">IMPULSO WEB</h3>
@@ -193,7 +188,7 @@
                 <a href="./pages/web.html" class="btn_pulse">Más detalles</a>          
               </div>
               <div class="contenedor_btn_pulse btn_impulsos">
-                <a href="https://calendly.com/impulsar-dev/impulso-web" class="btn_pulse">Agendar un encuentro</a>          
+                <a href="https://calendar.google.com/calendar/embed?src=c_5tcva5qj3o3papggtkfnaohkm0%40group.calendar.google.com&ctz=America%2FArgentina%2FMendoza" class="btn_pulse">Agendar un encuentro</a>          
               </div>
             </div>
           </div>
@@ -204,7 +199,7 @@
           </h2>
           <div id="containerCaminoDigital" class="container_content_caminoDigital wow animate__animated animate__fadeInLeft delay-1">
             <div id="contenedorImagenCaminoDigital" class="caminoDigital_container_img">
-              <img src="./assets/composiciones del logo/COHETE_ISOTIPO/PNG/COHETE_ EN BLANCO-11.png" alt="" class="caminoDigital_img">      
+              <img src="./assets/composiciones del logo/COHETE_ISOTIPO/PNG/COHETE_EN GRIS-12.png" alt="Impulsar - Pack Camino Digital" class="caminoDigital_img">      
             </div>
             <div id="caminoDigitalContainerSpeach" class="caminoDigital_container_speach">
               <h3 class=" h3 caminoDigital_title">PACK CAMINO DIGITAL</h3>
@@ -214,10 +209,10 @@
             </div>
             <div class="caminoDigital_container_btns">
               <div class="contenedor_btn_pulse btn_caminoDigital">
-                <a href="#" class="btn_pulse">Más detalles</a>          
+                <a href="./pages/camino.html" class="btn_pulse">Más detalles</a>          
               </div>
               <div class="contenedor_btn_pulse btn_caminoDigital">
-                <a href="#" class="btn_pulse">Agendar un encuentro</a>          
+                <a href="https://calendar.google.com/calendar/embed?src=c_5tcva5qj3o3papggtkfnaohkm0%40group.calendar.google.com&ctz=America%2FArgentina%2FMendoza" class="btn_pulse">Agendar un encuentro</a>          
               </div>
             </div>
           </div>
@@ -232,6 +227,7 @@
                   <div id="card" class="swiper-slide card">
                       <div class="dp">
                           <h3 class="card_title">IMPULSO DE REDES</h3>
+                          <i class="fa fa-solid fa-computer-mouse"></i>
                       </div>
                       <div class="card_content">
                           <p class="card_paragraph">
@@ -607,38 +603,12 @@
             </div>
           </div>
         </form>
-<!--         <article id="contactoRedesUbicacion" class="contacto_redesUbicacion">
-          <div id="containerRedes" class="containerRedes">
-            <h3 class="h3">
-              REDES
-            </h3>            
-            <div class="contacto_redes">
-                <a href="" type="button" class="contacto_redes_anchord">
-                  <i class="fa fa-facebook"></i>
-                </a>
-                <a href="" type="button" class="contacto_redes_anchord">
-                  <i class="fa fa-brands fa-instagram"></i>
-                </a>
-                </a>
-                <a href="" type="button" class="contacto_redes_anchord">
-                  <i class="fa fa-brands fa-whatsapp"></i>  
-                </a>
-            </div>
-          </div>
-          <div id="containerUbicacion" class="container_ubicacion">
-            <h3 class="h3">¿DÓNDE ENCONTRARNOS?</h2>
-            <p>
-              <i class="bi bi-geo-alt"></i> Olegario V. Andrade 315, Mendoza, Argentina
-            </p>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3349.8745787053654!2d-68.8586003851099!3d-32.90148417693296!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x967e090a39c9bbcb%3A0xa2d0f4a092f0413b!2sO.%20V.%20Andrade%20315%2C%20M5500BDO%20Mendoza!5e0!3m2!1ses!2sar!4v1636294490050!5m2!1ses!2sar" style="border:0;" allowfullscreen="" loading="lazy" class="container iframe__Contacto"></iframe>
-          </div>
-        </article> -->
         <article class="contacto_calendly">
           <h4 class="h4 contacto_calendly_title">AGENDAR UN ENCUENTRO</h4>
-          <!-- Principio del widget integrado de Calendly -->
-          <div class="calendly-inline-widget calendly" data-url="https://calendly.com/impulsar-dev" style="min-width:300px;height:630px;"></div>
-          <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
-          <!-- Final del widget integrado de Calendly -->
+          <div class="container_calendar">
+            <iframe  src="https://calendar.google.com/calendar/embed?height=400&wkst=1&bgcolor=%234285F4&ctz=America%2FArgentina%2FMendoza&showTz=0&showCalendars=0&showTabs=0&showDate=0&showTitle=0&showPrint=0&title=AGENDAR%20UN%20ENCUENTRO&src=Y29udGFjdG9AaW1wdWxzYXJkZXYuY29tLmFy&src=Y181dGN2YTVxajNvM3BhcGdndGtmbmFvaGttMEBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&src=ZXMtNDE5LmFyI2hvbGlkYXlAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&color=%23F09300&color=%23F09300&color=%23F09300" style="border-width:0" width="100%" height="400" frameborder="0" scrolling="no">
+            </iframe>  
+          </div>      
         </article>
       </section>
       <section id="sectionWhatsapp">
@@ -658,7 +628,7 @@
                   <div class="container">
                       <!-- Footer Logo -->                         
                       <a class="footer__logo" href="">
-                          <img src="./assets/composiciones del logo/COMPOSICION1_LOGO/PNG/LOGO_EN GRIS CLARO-01-recortado.png" alt="Logo Estudio Jurídico" class="footer__logo">
+                          <img src="./assets/composiciones del logo/COMPOSICION1_LOGO/PNG/LOGO_EN GRIS CLARO-01-recortado.png" alt="Logo Impulsar Dev Solutions" class="footer__logo">
                       </a>
                   </div>
               </div>
