--- a/pages/marca.html
+++ b/pages/marca.html
@@ -113,55 +113,55 @@
                         <div class="beneficios">
                             <div class="beneficios_item">
                                 <div class="container_dots">
-                                    <span></span>
-                                    <span></span>
-                                    <span></span>
-                                    <span></span>
+                                    <span class="container_dots_span container_dots_span_1"></span>
+                                    <span class="container_dots_span container_dots_span_2"></span>
+                                    <span class="container_dots_span container_dots_span_3"></span>
+                                    <span class="container_dots_span container_dots_span_4"></span>
                                 </div>
                                 <p class="beneficios_p">MODELO DE NEGOCIOS</p>
                             </div>
                             <div class="beneficios_item">
                                 <div class="container_dots">
-                                    <span></span>
-                                    <span></span>
-                                    <span></span>
-                                    <span></span>
+                                    <span class="container_dots_span container_dots_span_1"></span>
+                                    <span class="container_dots_span container_dots_span_2"></span>
+                                    <span class="container_dots_span container_dots_span_3"></span>
+                                    <span class="container_dots_span container_dots_span_4"></span>
                                 </div>
                                 <p class="beneficios_p">MATRIZ FODA</p>
                             </div>
                             <div class="beneficios_item">
                                 <div class="container_dots">
-                                    <span></span>
-                                    <span></span>
-                                    <span></span>
-                                    <span></span>
+                                    <span class="container_dots_span container_dots_span_1"></span>
+                                    <span class="container_dots_span container_dots_span_2"></span>
+                                    <span class="container_dots_span container_dots_span_3"></span>
+                                    <span class="container_dots_span container_dots_span_4"></span>
                                 </div>
                                 <p class="beneficios_p">NAMING</p>
                             </div>
                             <div class="beneficios_item">
                                 <div class="container_dots">
-                                    <span></span>
-                                    <span></span>
-                                    <span></span>
-                                    <span></span>
+                                    <span class="container_dots_span container_dots_span_1"></span>
+                                    <span class="container_dots_span container_dots_span_2"></span>
+                                    <span class="container_dots_span container_dots_span_3"></span>
+                                    <span class="container_dots_span container_dots_span_4"></span>
                                 </div>
                                 <p class="beneficios_p">PITCH DE VENTA</p>
                             </div>
                             <div class="beneficios_item">
                                 <div class="container_dots">
-                                    <span></span>
-                                    <span></span>
-                                    <span></span>
-                                    <span></span>
+                                    <span class="container_dots_span container_dots_span_1"></span>
+                                    <span class="container_dots_span container_dots_span_2"></span>
+                                    <span class="container_dots_span container_dots_span_3"></span>
+                                    <span class="container_dots_span container_dots_span_4"></span>
                                 </div>
                                 <p class="beneficios_p">POSICIONAMIENTO DE MARCA</p>
                             </div>
                             <div class="beneficios_item">
                                 <div class="container_dots">
-                                    <span></span>
-                                    <span></span>
-                                    <span></span>
-                                    <span></span>
+                                    <span class="container_dots_span container_dots_span_1"></span>
+                                    <span class="container_dots_span container_dots_span_2"></span>
+                                    <span class="container_dots_span container_dots_span_3"></span>
+                                    <span class="container_dots_span container_dots_span_4"></span>
                                 </div>
                                 <p class="beneficios_p">ESTRATEGIA DE MARCA</p>
                             </div>                                                                                                
