--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                   <div id="card" class="swiper-slide card">
                       <div class="dp">
                           <h3 class="card_title">IMPULSO DE REDES</h3>
-                          <i class="fa fa-solid fa-computer-mouse"></i>
+                          <i class="bi bi-hand-index-thumb"></i>
                       </div>
                       <div class="card_content">
                           <p class="card_paragraph">
@@ -240,6 +240,7 @@
                   <div id="card" class="swiper-slide card">
                       <div class="dp">
                           <h3 class="card_title">IMPULSO LEGAL</h3>
+                          <i class="bi bi-hand-index-thumb"></i>
                       </div>
                       <div class="card_content">
                           <p class="card_paragraph">
@@ -253,6 +254,7 @@
                   <div id="card" class="swiper-slide card">
                       <div class="dp">
                           <h3 class="card_title">IMPULSO DE MARKETING</h3>
+                          <i class="bi bi-hand-index-thumb"></i>
                       </div>
                       <div class="card_content">
                           <p class="card_paragraph">
@@ -266,6 +268,7 @@
                   <div id="card" class="swiper-slide card">
                       <div class="dp">
                           <h3 class="card_title">IMPULSO DE DISEÑO GRÁFICO</h3>
+                          <i class="bi bi-hand-index-thumb"></i>
                       </div>
                       <div class="card_content">
                           <p class="card_paragraph">
@@ -279,6 +282,7 @@
                   <div id="card" class="swiper-slide card">
                       <div class="dp">
                           <h3 class="card_title">IMPULSO FOTOGRÁFICO</h3>
+                          <i class="bi bi-hand-index-thumb"></i>
                       </div>
                       <div class="card_content">
                           <p class="card_paragraph">
@@ -608,6 +612,11 @@
           <div class="container_calendar">
             <iframe  src="https://calendar.google.com/calendar/embed?height=400&wkst=1&bgcolor=%234285F4&ctz=America%2FArgentina%2FMendoza&showTz=0&showCalendars=0&showTabs=0&showDate=0&showTitle=0&showPrint=0&title=AGENDAR%20UN%20ENCUENTRO&src=Y29udGFjdG9AaW1wdWxzYXJkZXYuY29tLmFy&src=Y181dGN2YTVxajNvM3BhcGdndGtmbmFvaGttMEBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&src=ZXMtNDE5LmFyI2hvbGlkYXlAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&color=%23F09300&color=%23F09300&color=%23F09300" style="border-width:0" width="100%" height="400" frameborder="0" scrolling="no">
             </iframe>  
+            <a href="https://calendar.google.com/calendar/embed?src=c_5tcva5qj3o3papggtkfnaohkm0%40group.calendar.google.com&ctz=America%2FArgentina%2FMendoza">
+              <h4 class="h6">Hacé click aquí para agendar tu encuentro</h4>
+              <i class="bi bi-arrow-up-short"></i>
+            </a>
+            
           </div>      
         </article>
       </section>
