Mas detalles marca

--- a/pages/marca.html
+++ b/pages/marca.html
@@ -105,7 +105,7 @@
                         DESARROLLÁ LA BASE SÓLIDA DE TU MARCA Y DALE ESE IMPULSO PARA DESTACAR EN EL MERCADO.
                     </p>
                 </article>
-                <article class="masServiciosa_speach">
+                <article class="masServicios_speach">
                     <div class="masServicios_brindamos">
                         <h2 class="h3 masServicios_title">
                             VAS A LLEVARTE
@@ -167,38 +167,83 @@
                             </div>                                                                                                
                         </div>
                     </div>
-                    <p class="masServicios_speach_paragraph">
-                        Sabemos que los comienzos son difíciles, por eso hemos diseñado este servicio para vos.
-                    </p>
-                    <p class="masServicios_speach_paragraph">
-                        Es un proceso de análisis y desarrollo, en el que nos interiorizamos en los objetivos y metas de tu emprendimiento, considerando el corazón de tu marca y la historia detrás de ella.
-                    </p>
-                    <p class="masServicios_speach_paragraph">
-                        El crear la Identidad de Marca hará que tu proyecto destaque del resto y lo vuelva único.
-                    </p>
-                    <p class="masServicios_speach_paragraph">
-                        También puede que te hayas animado a despegar por cuenta propia y algo esté fallando, por lo que te brindamos ese acompañamiento necesario para volver a tomar impulso.
-                    </p>
-                    <p class="masServicios_speach_paragraph">
-                        Animate al cambio y agendá un encuentro con nuestro equipo de profesionales.
-                    </p>
-                    <p class="masServicios_speach_paragraph">
-                        De la mano de Impulsar aprenderás a posicionar tu marca y así diferenciarte de la competencia, también a conocer a tu audiencia para crear contenidos que generen un beneficio positivo y finalmente definirás la estrategia y bases de tu marca hasta su identidad visual.
-                    </p>
-                </article>
-                <article class="masServicios_calendly">
-                    <h3 class="h3 masServicios_title">
-                        AGENDAR UN ENCUENTRO
-                    </h3>
-                <div class="container_calendar">
-                    <iframe  src="https://calendar.google.com/calendar/embed?height=400&wkst=1&bgcolor=%234285F4&ctz=America%2FArgentina%2FMendoza&showTz=0&showCalendars=0&showTabs=0&showDate=0&showTitle=0&showPrint=0&title=AGENDAR%20UN%20ENCUENTRO&src=Y29udGFjdG9AaW1wdWxzYXJkZXYuY29tLmFy&src=Y181dGN2YTVxajNvM3BhcGdndGtmbmFvaGttMEBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&src=ZXMtNDE5LmFyI2hvbGlkYXlAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&color=%23F09300&color=%23F09300&color=%23F09300" style="border-width:0" width="100%" height="400" frameborder="0" scrolling="no">
-                    </iframe>  
-                </div>  
+                    <div class="masServicios__speach__container__paragraphBeneficios">
+                        <div class="masServicios_speach_container_paragraph">
+                            <p class="masServicios_speach_paragraph">
+                                Sabemos que los comienzos son difíciles, por eso hemos diseñado este servicio para vos.
+                            </p>
+                            <p class="masServicios_speach_paragraph">
+                                Es un proceso de análisis y desarrollo, en el que nos interiorizamos en los objetivos y metas de tu emprendimiento, considerando el corazón de tu marca y la historia detrás de ella.
+                            </p>
+                            <p class="masServicios_speach_paragraph">
+                                El crear la Identidad de Marca hará que tu proyecto destaque del resto y lo vuelva único.
+                            </p>
+                            <p class="masServicios_speach_paragraph">
+                                También puede que te hayas animado a despegar por cuenta propia y algo esté fallando, por lo que te brindamos ese acompañamiento necesario para volver a tomar impulso.
+                            </p>
+                            <p class="masServicios_speach_paragraph">
+                                Animate al cambio y agendá un encuentro con nuestro equipo de profesionales.
+                            </p>
+                            <p class="masServicios_speach_paragraph">
+                                De la mano de Impulsar aprenderás a posicionar tu marca y así diferenciarte de la competencia, también a conocer a tu audiencia para crear contenidos que generen un beneficio positivo y finalmente definirás la estrategia y bases de tu marca hasta su identidad visual.
+                            </p>
+                        </div>
+                        <div class="masServicios__speach__benefician">
+                            <i class="bi bi-graph-up-arrow"></i>
+                            <div class="benefician_container">
+                                <div class="benefician">
+                                    <i class="bi bi-check"></i>Impulsa el mensaje de tu marca.
+                                </div>
+                                <div class="benefician">
+                                    <i class="bi bi-check"></i>Impulsa el corazón de tu marca. 
+                                </div>
+                                <div class="benefician">
+                                    <i class="bi bi-check"></i>Impulsa la historia de tu marca.
+                                </div>
+                                <div class="benefician">
+                                    <i class="bi bi-check"></i>Impulsa la creación de tu contenido.
+                                </div>
+                                <div class="benefician">
+                                    <i class="bi bi-check"></i>Impulsa tus objetivos.
+                                </div>
+                                <div class="benefician">
+                                    <i class="bi bi-check"></i>Impulsa tu estrategia de marketing
+                                </div> 
+                                <div class="benefician">
+                                    <i class="bi bi-check"></i>Impulsa tus redes sociales.
+                                </div> 
+                                <div class="benefician">
+                                    <i class="bi bi-check"></i>Impulsa tu página web.
+                                </div> 
+                                <div class="benefician">
+                                    <i class="bi bi-check"></i>Impulsa tu diseño gráfico.
+                                </div>    
+                            </div>                                                     
+                        </div>
+                    </div>
+
                 </article>
                 <article class="masServicios_formulario">
                     <h3 class="h3 masServicios_title">
                         CONTACTAR
                     </h3>
+                    <div class="contacto_redes_container">
+                        <div class="contacto_redes">
+                            <!-- Facebook -->
+                            <a href="" type="button" class="contacto_redes_anchord">
+                                <i class="fa fa-facebook"></i>
+                            </a>
+                            <!-- Instagram -->
+                            <a href="https://instagram.com/impulsardev?igshid=YmMyMTA2M2Y=" type="button" class="contacto_redes_anchord">
+                                <i class="fa fa-brands fa-instagram"></i>
+                            </a>
+                            </a>
+                            <!-- Whatsapp -->
+                            <a href="https://api.whatsapp.com/send?phone=5492616307131" type="button" class="contacto_redes_anchord">
+                                <i class="fa fa-brands fa-whatsapp"></i>  
+                            </a>
+                        </div>
+                    </div>
                     <form action="https://formspree.io/f/xoqrplko" id="contactoFormulario" class="contacto_formulario" method="post" enctype="">
                         <div id="formularioContenedorDatos" class="formulario_contenedor_datos">
                             <div class="mb-3 separador-leve contenedor_inputs">
@@ -224,7 +269,20 @@
                             </div>
                         </div>
                     </form>
-                </article>            
+                </article> 
+                <article class="masServicios_calendly">
+                    <h3 class="h3 masServicios_title">
+                        AGENDAR UN ENCUENTRO
+                    </h3>
+                    <div class="container_calendar">
+                        <iframe  src="https://calendar.google.com/calendar/embed?height=400&wkst=1&bgcolor=%234285F4&ctz=America%2FArgentina%2FMendoza&showTz=0&showCalendars=0&showTabs=0&showDate=0&showTitle=0&showPrint=0&title=AGENDAR%20UN%20ENCUENTRO&src=Y29udGFjdG9AaW1wdWxzYXJkZXYuY29tLmFy&src=Y181dGN2YTVxajNvM3BhcGdndGtmbmFvaGttMEBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&src=ZXMtNDE5LmFyI2hvbGlkYXlAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&color=%23F09300&color=%23F09300&color=%23F09300" style="border-width:0" width="100%" height="400" frameborder="0" scrolling="no">
+                        </iframe>  
+                        <a href="https://calendar.google.com/calendar/embed?src=c_5tcva5qj3o3papggtkfnaohkm0%40group.calendar.google.com&ctz=America%2FArgentina%2FMendoza">
+                            <h4 class="h6">Hacé click aquí para agendar tu encuentro</h4>
+                            <i class="bi bi-arrow-up-short"></i>
+                        </a>
+                    </div>  
+                </article>           
                 <h3 class="h3 masServicios_title">
                     MÁS SERVICIOS
                 </h3>  
@@ -250,14 +308,6 @@
                             <div id="card" class="swiper-slide card_masServicios">
                                 <div class="dp_masServicios">
                                     <h3 class="card_title">PACK CAMINO DIGITAL</h3>
-                                    <div class="contenedor_btn_card">
-                                        <a href="#" class="btn_card">Ver servicio</a>          
-                                    </div>
-                                </div>
-                            </div>
-                            <div id="card" class="swiper-slide card_masServicios">
-                                <div class="dp_masServicios">
-                                    <h3 class="card_title">IMPULSO DE REDES</h3>
                                     <div class="contenedor_btn_card">
                                         <a href="#" class="btn_card">Ver servicio</a>          
                                     </div>
