sitemap, json y SEO

--- a/pages/web.html
+++ b/pages/web.html
@@ -32,8 +32,8 @@
         <meta name="theme-color" content="#cdb8e0">
         <!-- Title and SEO-->
         <title>Impulsar - Impulso Web</title>
-        <meta name="description" content=""/>
-        <meta name="keywords" content=""/>
+        <meta name="description" content="Impulsá tu marca con una página web de diseño. Desarrollo web de acuerdo a tus objetivos y necesidades con facilidades de pago."/>
+        <meta name="keywords" content="Desarrollo de soluciones. Diseño y desarrollo de modelo de negocios, diseño gráfico, diseño y desarrollo web, marketing digital, páginas web, landing pages, páginas corporativas, empresas, marca, negocios, potenciar, impulsar, impulsarte en el mercado, destacar en el mercado, redes sociales, community manager, planes a tu medida, planes de pago, facilidades de pago."/>
         <!-- Estilos-->
         <link rel="stylesheet" href="../CSS/normalize.css">
         <link rel="stylesheet" href="../CSS/main.css" />
